Changes: - fixed css hourly forecast subtitle (time, weather forecast, temperature) on mobile - fixed slider height on max-width 380px - fixed arrows on tablet

--- a/src/App.css
+++ b/src/App.css
@@ -523,10 +523,6 @@ button {
     width: 100%;
 }
 
-.WeatherCurrent .top_content {
-    /*margin: 30px;*/
-}
-
 .WeatherCurrent .top_content_header {
     margin: 10px 10px 0 10px;
     text-align: center;
@@ -580,10 +576,6 @@ button {
 
 
 
-
-
-
-
 /*
 + Slider
 */
@@ -594,7 +586,6 @@ button {
 }
 
 .awssld {
-    height: 95vh;
     height: 1000px;
     background: url(img/beach.jpg) no-repeat top;
     --slider-transition-duration: 1000ms !important;
@@ -766,10 +757,8 @@ button {
 
 .ForecastDailyInfo_wrapper h2,
 .ForecastHourlyInfo_wrapper h2 {
-    /*background-color: var(--blue);*/
     border-radius: 4px;
     border: 3px solid var(--blue);
-    /*color: var(--white);*/
     display: inline-block;
     font-size: 1.8rem;
     font-weight: normal;
@@ -793,9 +782,6 @@ button {
 }
 
 .ForecastHourlyInfo .sub_title {
-    /*background-color: var(--blue);*/
-    /*border-radius: 4px;*/
-    /*color: var(--white);*/
     font-weight: bold;
     margin-bottom: 10px;
     padding: 5px;
@@ -1501,10 +1487,6 @@ button {
         word-spacing: 0.1rem;
     }
 
-    .awssld {
-        height: 1100px;
-    }
-
     .WeatherCurrent .top_content_header {
         margin: 0;
     }
@@ -1538,6 +1520,23 @@ button {
         display: block;
     }
 
+    .awssld {
+        height: 1250px;
+    }
+
+    .awssld__controls__arrow-left,
+    .awssld__controls__arrow-right {
+        bottom: 45px;
+    }
+
+    .awssld__controls__arrow-left {
+        left: 25% !important;
+    }
+
+    .awssld__controls__arrow-right {
+        right: 25% !important;
+    }
+
     .ForecastDailyInfo .bottom_content {
         flex-wrap: wrap;
         line-height: 1.2;
@@ -1553,19 +1552,6 @@ button {
         width: 90% !important;
     }
 
-    .awssld__controls__arrow-left,
-    .awssld__controls__arrow-right {
-        bottom: 20px;
-    }
-
-    .awssld__controls__arrow-left {
-        left: 25% !important;
-    }
-
-    .awssld__controls__arrow-right {
-        right: 25% !important;
-    }
-
     .ForecastDailyInfo_wrapper h2.daily_summary {
         margin: 30px;
     }
@@ -1578,6 +1564,13 @@ button {
     .ForecastDailyInfo .bottom_left,
     .ForecastDailyInfo .bottom_right {
         width: 100%;
+    }
+
+    .ForecastEveryThreeHours .item_wrapper {
+        align-items: center;
+        border-bottom: 1px solid black;
+        padding: 10px 0;
+        width: 85%;
     }
 
     .ForecastHourlyInfo_wrapper h2 {
@@ -1758,6 +1751,11 @@ button {
         margin-top: 70px;
     }
 
+    .awssld__controls__arrow-left,
+    .awssld__controls__arrow-right {
+        bottom: 65px;
+    }
+
     .awssld__controls__arrow-left {
         left: 10% !important;
     }
@@ -1793,8 +1791,6 @@ button {
     }
 
     .ForecastEveryThreeHours .item_wrapper {
-        align-items: center;
-        border-bottom: 1px solid black;
         font-size: 0.9rem;
         padding: 5px 0;
         width: 85%;
@@ -1811,22 +1807,7 @@ button {
 
     .ForecastHourlyInfo .sub_title {
         font-size: 1.2rem;
-        /*width: 90%;*/
-    }
-
-    .ForecastHourlyInfo .sub_title .item {
-        /*width: auto;*/
-    }
-    .ForecastHourlyInfo .sub_title .item:nth-child(1) {
-        /*padding-left: 20px;*/
-    }
-
-    .ForecastHourlyInfo .sub_title .item:nth-child(2) {
-        /*padding-left: 15px;*/
-        /*width: 40%;*/
-    }
-    .ForecastHourlyInfo .sub_title .item:nth-child(3) {
-        /*padding-right: 5px;*/
+        width: 90%;
     }
 
     .ForecastEveryThreeHours .item_forecast img {
@@ -1849,6 +1830,10 @@ button {
         font-size: 2rem;
     }
 
+    .dot_slide_wrapper {
+        margin-top: 70px;
+    }
+
     .ForecastHeader .sub_title_main {
         font-size: 1.5rem;
     }
@@ -1858,8 +1843,9 @@ button {
         font-size: 1.5rem;
     }
 
-    .dot_slide_wrapper {
-        margin-top: 70px;
+    .ForecastHourlyInfo .sub_title {
+        font-size: 1rem;
+        width: 90%;
     }
 }
 
@@ -1888,7 +1874,11 @@ button {
 
     .dot_slide_wrapper {
         margin-top: 50px;
+    }
 
+    .ForecastHourlyInfo .sub_title {
+        font-size: 0.9rem;
+        width: 95%;
     }
 
     .AirQuality .main {
@@ -1909,4 +1899,20 @@ button {
         width: 80%;
     }
 
+}
+
+
+
+/*
++ max 400px
+*/
+@media (max-width: 400px) {
+    .awssld {
+        height: 1650px;
+        background-size: 100% 100%;
+    }
+
+    .dot_slide_wrapper {
+        margin-top: 100px;
+    }
 }
